Don't set empty preedit by reset when no composing state

When calling gtk_im_context_reset(), ibus-pinyin send the signals "preedit_start", "preedit_changed" (with emptry predit string), and "preeedit_end".  Even if no composing state, these signals occurs.

This causes some application is unexcpeted behavior.

Chromium
https://bugs.chromium.org/p/chromium/issues/detail?id=404005

Firefox
https://bugzilla.mozilla.org/show_bug.cgi?id=1138159

So when calling gtk_im_context_reset() without composing, ibus-pinyin shouldn't send "preedit_*" signals.